[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-groupmeapi"
version = "1.0.0"
description = "An API wrapper for GroupMe"
readme = "README.md"
authors = [{ name = "LL" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["api", "groupme", "wrapper"]
dependencies = []
requires-python = ">=3.7"
